assets/css/style.css
:root{
    --dark: #2c3b4a;
    --blue: #346bae;
    --yellow: #e1c303; 
    --light: #e4ecee;
    /* --yellow: #e1c303;   #00bcd1 */
}

*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    list-style-type: none;
    text-decoration: none;
}
body{
    font-family: 'Nunito', sans-serif;
    position: relative;
}
a{
    color: inherit;
}

.container{
    width: 90%;
    margin: 0 auto;
}

header{
    width: 100%;
    /* min-height: 120vh; */
    background: var(--blue);
}

.topnav .container, .nav .container{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 0;
    color: white;
    font-family: 'Asap', sans-serif;
}

.topnav{
    border-bottom: 1px solid #ffffff68;
}
.contact-and-location, .social-media-icons{
    display: flex;
}

.contact-and-location li{
    padding-right: 1.5rem;
}
.social-media-icons li{
    padding-left: 1.5rem;
}

.contact-and-location li{
    margin-right: 1rem;
}

.contact-and-location i {
    margin-right: .5rem;
}

.nav{
    position: sticky;
    top: 0;
    z-index: 2;
    /* border: 2px solid red; */
}

.nav ul{
    display: flex;
    padding: 1rem 0;
}

.nav ul li {
    padding-left: 2.5rem;
    font-weight: 500;
}

#logo{
    font-weight: 800;
    font-size: 1.5rem;
}
.hero{
    padding: 12rem 0;
    background-color: var(--blue);
    position: absolute;
    top: 0;
    z-index: -10;
}
.hero-content{
    display: flex;
    flex-direction: column;
    gap: 2rem;
    width: 65%;
    background: #ffffffdb;
    padding: 3rem 4rem;
    border-radius: 1rem;
    color: var(--blue);
}

.hero h1{
    font-weight: 400;
    font-size: 1.3rem;
}

.hero h2{
    font-weight: 700;
    font-size: 3.5rem;
    font-family: "Asap", sans-serif;
    line-height: 1.2;
}
.hero-buttons{
    padding: 1rem 0;
    display: flex;
    gap: 1.4rem;
}
.btn{
    padding: 1rem 2.5rem;
    border-radius: .4rem;
    font-family: 'Asap', sans-serif;
    text-transform: uppercase;
    cursor: pointer;
    position: relative;
    overflow: hidden;
    transition: all 0.3s linear;
}
.btn::after{
    content: '';
    position: absolute;
    width: 30rem;
    height: 30rem;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%) scale(0.2);
    background: var(--dark);
    border-radius: 50%;
    opacity: 0;
    z-index: -1;
    transition: all 0.3s linear;
}
.btn:hover{
    background-color: var(--dark);
    color: var(--light);
    border: 1px solid var(--dark);
}
.btn:hover::after{
    transform: translate(-50%, -50%) scale(1);
    opacity: 1;
}

.btn-yellow-fill{
    background: var(--yellow);
    color: var(--light);
    font-weight: 600;
    border: 1px solid var(--yellow);
}
.btn-dark-fill{
    background: var(--dark);
    color: var(--light);
}
.btn-blue-outline{
    border: 1px solid var(--blue);
    color: var(--blue);
    border: 1px solid var(--blue);
}
main{
    margin-top: 80vh;
}

